// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots dag/advanced editable mode 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <svg
    className="dag-wrapper Dag-root-1"
    height={500}
    onDoubleClick={[Function]}
    onMouseMove={[Function]}
    onMouseUp={[Function]}
    width={500}
  >
    <g
      className="dag__graph"
    >
      <g
        className="dag__edge Dag-dagEdge-4 Dag-dagEditable-5"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-0"
        />
      </g>
      <g
        className="dag__edge Dag-dagEdge-4 Dag-dagEditable-5"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-1"
        />
      </g>
      <g
        className="dag__edge Dag-dagEdge-4 Dag-dagEditable-5"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-2"
        />
      </g>
      <g
        className="dag__edge Dag-dagEdge-4 Dag-dagEditable-5"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-3"
        />
      </g>
      <g
        className="dag__edge Dag-dagEdge-4 Dag-dagEditable-5"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-4"
        />
      </g>
      <g
        className="dag__edge Dag-dagEdge-4 Dag-dagEditable-5"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-5"
        />
      </g>
      <g
        className="dag__node Dag-dagNode-2 Dag-dagEditable-5"
        id="dag__node--app"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-3"
        />
      </g>
      <g
        className="dag__node Dag-dagNode-2 Dag-dagEditable-5"
        id="dag__node--lodash"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-3"
        />
      </g>
      <g
        className="dag__node Dag-dagNode-2 Dag-dagEditable-5"
        id="dag__node--react"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-3"
        />
      </g>
      <g
        className="dag__node Dag-dagNode-2 Dag-dagEditable-5"
        id="dag__node--react-dom"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-3"
        />
      </g>
      <g
        className="dag__node Dag-dagNode-2 Dag-dagEditable-5"
        id="dag__node--apollo"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-3"
        />
      </g>
      <g
        className="dag__node Dag-dagNode-2 Dag-dagEditable-5"
        id="dag__node--enzyme"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-3"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Storyshots dag/basic no wrapper 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <svg
    className="dag-wrapper Dag-root-1"
    height={500}
    onDoubleClick={[Function]}
    onMouseMove={[Function]}
    onMouseUp={[Function]}
    width={500}
  >
    <g
      className="dag__graph"
    >
      <g
        className="dag__edge Dag-dagEdge-4"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-0"
        />
      </g>
      <g
        className="dag__edge Dag-dagEdge-4"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-1"
        />
      </g>
      <g
        className="dag__edge Dag-dagEdge-4"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-2"
        />
      </g>
      <g
        className="dag__edge Dag-dagEdge-4"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-3"
        />
      </g>
      <g
        className="dag__edge Dag-dagEdge-4"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-4"
        />
      </g>
      <g
        className="dag__edge Dag-dagEdge-4"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-5"
        />
      </g>
      <g
        className="dag__node Dag-dagNode-2"
        id="dag__node--app"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-3"
        />
      </g>
      <g
        className="dag__node Dag-dagNode-2"
        id="dag__node--lodash"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-3"
        />
      </g>
      <g
        className="dag__node Dag-dagNode-2"
        id="dag__node--react"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-3"
        />
      </g>
      <g
        className="dag__node Dag-dagNode-2"
        id="dag__node--react-dom"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-3"
        />
      </g>
      <g
        className="dag__node Dag-dagNode-2"
        id="dag__node--apollo"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-3"
        />
      </g>
      <g
        className="dag__node Dag-dagNode-2"
        id="dag__node--enzyme"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-3"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Storyshots dag/themed paper wrapper (dark) 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "width": "100vw",
    }
  }
>
  <div
    className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
    style={
      Object {
        "height": "500px",
        "width": "500px",
      }
    }
  >
    <div
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <svg
        className="dag-wrapper Dag-root-28"
        height={500}
        onDoubleClick={[Function]}
        onMouseMove={[Function]}
        onMouseUp={[Function]}
        width={500}
      >
        <g
          className="dag__graph"
        >
          <g
            className="dag__edge Dag-dagEdge-31"
            onClick={[Function]}
          >
            <line />
            <polygon
              className="dag__edge-arrow"
              id="dag__line-0"
            />
          </g>
          <g
            className="dag__edge Dag-dagEdge-31"
            onClick={[Function]}
          >
            <line />
            <polygon
              className="dag__edge-arrow"
              id="dag__line-1"
            />
          </g>
          <g
            className="dag__edge Dag-dagEdge-31"
            onClick={[Function]}
          >
            <line />
            <polygon
              className="dag__edge-arrow"
              id="dag__line-2"
            />
          </g>
          <g
            className="dag__edge Dag-dagEdge-31"
            onClick={[Function]}
          >
            <line />
            <polygon
              className="dag__edge-arrow"
              id="dag__line-3"
            />
          </g>
          <g
            className="dag__edge Dag-dagEdge-31"
            onClick={[Function]}
          >
            <line />
            <polygon
              className="dag__edge-arrow"
              id="dag__line-4"
            />
          </g>
          <g
            className="dag__edge Dag-dagEdge-31"
            onClick={[Function]}
          >
            <line />
            <polygon
              className="dag__edge-arrow"
              id="dag__line-5"
            />
          </g>
          <g
            className="dag__node Dag-dagNode-29"
            id="dag__node--app"
            onClick={[Function]}
            onDoubleClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-30"
            />
          </g>
          <g
            className="dag__node Dag-dagNode-29"
            id="dag__node--lodash"
            onClick={[Function]}
            onDoubleClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-30"
            />
          </g>
          <g
            className="dag__node Dag-dagNode-29"
            id="dag__node--react"
            onClick={[Function]}
            onDoubleClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-30"
            />
          </g>
          <g
            className="dag__node Dag-dagNode-29"
            id="dag__node--react-dom"
            onClick={[Function]}
            onDoubleClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-30"
            />
          </g>
          <g
            className="dag__node Dag-dagNode-29"
            id="dag__node--apollo"
            onClick={[Function]}
            onDoubleClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-30"
            />
          </g>
          <g
            className="dag__node Dag-dagNode-29"
            id="dag__node--enzyme"
            onClick={[Function]}
            onDoubleClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-30"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots dag/themed paper wrapper (light) 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "width": "100vw",
    }
  }
>
  <div
    className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
    style={
      Object {
        "height": "500px",
        "width": "500px",
      }
    }
  >
    <div
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <svg
        className="dag-wrapper Dag-root-28"
        height={500}
        onDoubleClick={[Function]}
        onMouseMove={[Function]}
        onMouseUp={[Function]}
        width={500}
      >
        <g
          className="dag__graph"
        >
          <g
            className="dag__edge Dag-dagEdge-31"
            onClick={[Function]}
          >
            <line />
            <polygon
              className="dag__edge-arrow"
              id="dag__line-0"
            />
          </g>
          <g
            className="dag__edge Dag-dagEdge-31"
            onClick={[Function]}
          >
            <line />
            <polygon
              className="dag__edge-arrow"
              id="dag__line-1"
            />
          </g>
          <g
            className="dag__edge Dag-dagEdge-31"
            onClick={[Function]}
          >
            <line />
            <polygon
              className="dag__edge-arrow"
              id="dag__line-2"
            />
          </g>
          <g
            className="dag__edge Dag-dagEdge-31"
            onClick={[Function]}
          >
            <line />
            <polygon
              className="dag__edge-arrow"
              id="dag__line-3"
            />
          </g>
          <g
            className="dag__edge Dag-dagEdge-31"
            onClick={[Function]}
          >
            <line />
            <polygon
              className="dag__edge-arrow"
              id="dag__line-4"
            />
          </g>
          <g
            className="dag__edge Dag-dagEdge-31"
            onClick={[Function]}
          >
            <line />
            <polygon
              className="dag__edge-arrow"
              id="dag__line-5"
            />
          </g>
          <g
            className="dag__node Dag-dagNode-29"
            id="dag__node--app"
            onClick={[Function]}
            onDoubleClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-30"
            />
          </g>
          <g
            className="dag__node Dag-dagNode-29"
            id="dag__node--lodash"
            onClick={[Function]}
            onDoubleClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-30"
            />
          </g>
          <g
            className="dag__node Dag-dagNode-29"
            id="dag__node--react"
            onClick={[Function]}
            onDoubleClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-30"
            />
          </g>
          <g
            className="dag__node Dag-dagNode-29"
            id="dag__node--react-dom"
            onClick={[Function]}
            onDoubleClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-30"
            />
          </g>
          <g
            className="dag__node Dag-dagNode-29"
            id="dag__node--apollo"
            onClick={[Function]}
            onDoubleClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-30"
            />
          </g>
          <g
            className="dag__node Dag-dagNode-29"
            id="dag__node--enzyme"
            onClick={[Function]}
            onDoubleClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-30"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;
